--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,16 +1,21 @@
 PORT=
+
+# Database Configration
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
 DB_NAME=
+
+# JWT
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=1d
-REFRESH_TOKEN_SECRET=
-REFRESH_TOKEN_EXPIRY=10d
-CORS_ORIGIN=
+
+# Cloudinary Configration
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+# Nodemailer
 EMAIL_USER=
 EMAIL_PASSWORD=
