--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src/**/*.{ts,tsx}",
     "prettier": "prettier --write 'src/**/*.{ts,tsx}'",
     "format": "npm run prettier && npm run lint",
+    "swagger": "ts-node src/swagger.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.20.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^9.20.1",
@@ -37,6 +39,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   }
 }
