feat: db connection

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,6 +1,6 @@
 PORT=
 
-# Database Configration
+# Database Configuration
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
@@ -11,7 +11,7 @@ DB_NAME=
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=1d
 
-# Cloudinary Configration
+# Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
