--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@eslint/js": "^9.20.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.11",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
@@ -39,7 +40,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "pg": "^8.13.3",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   }
