--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -3,8 +3,8 @@
   "tabWidth": 2,
   "useTabs": false,
   "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all",
+  "singleQuote": false,
+  "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
   "arrowParens": "always",
