--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -77,11 +77,10 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
