feat: jwt implement feat: login controller added

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -8,8 +8,11 @@ DB_PORT=
 DB_NAME=
 
 # JWT
-ACCESS_TOKEN_SECRET=
-ACCESS_TOKEN_EXPIRY=1d
+JWT_SECRET=
+JWT_ISSUER=ISSUER
+JWT_AUDIENCE=AUDIENCE
+
+API_PREFIX=api
 
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=
