feat: nodemailer and welcome mail

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -21,5 +21,8 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
 # Nodemailer
-EMAIL_USER=
-EMAIL_PASSWORD=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_SERVICE=
+MAIL_USER=
+MAIL_PASSWORD=
